--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@
 }
 
 .address-text {
-  max-width: 240px;
+  max-width: 245px;
 }
 
 .aligned-text_center {
